--- a/src/item-templates/MauiPageCLI/MauiPage/MauiPage.xaml
+++ b/src/item-templates/MauiPageCLI/MauiPage/MauiPage.xaml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage x:Class="MyApp.Namespace.MyPage"
+<ContentPage x:Class="MyApp.Namespace.MauiPage"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MyApp.Namespace">
 	<ContentPage.Content>
 		<StackLayout>
 			<Label Text="Welcome to .NET MAUI!!!"
+			       TextColor="Purple"
 			       HorizontalOptions="CenterAndExpand"
 			       VerticalOptions="CenterAndExpand"/>
 		</StackLayout>
