--- a/src/ItemTemplates/MauiShell/MauiShell.xaml
+++ b/src/ItemTemplates/MauiShell/MauiShell.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<Shell x:Class="MyApp.Namespace.MauiShell"
+<Shell x:Class="$rootnamespace$.$safeitemname$"
        xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-       xmlns:local="clr-namespace:MyApp.Namespace">
+       xmlns:local="clr-namespace:$rootnamespace$">
 	<!--
 	    The overall app visual hierarchy is defined here, along with navigation.
 		Ensure atleast a Flyout item or a TabBar is defined for Shell to work
