--- a/src/ItemTemplates/MauiTemplatesCLI/MauiPage/MauiPage.xaml
+++ b/src/ItemTemplates/MauiTemplatesCLI/MauiPage/MauiPage.xaml
@@ -3,12 +3,12 @@
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MyApp.Namespace">
-	<ContentPage.Content>
-		<StackLayout>
-			<Label Text="Welcome to .NET MAUI!!!"
-			       TextColor="Purple"
-			       HorizontalOptions="CenterAndExpand"
-			       VerticalOptions="CenterAndExpand"/>
-		</StackLayout>
-	</ContentPage.Content>
+    <ContentPage.Content>
+        <StackLayout>
+            <Label Text="Welcome to .NET MAUI!!!"
+                   TextColor="Purple"
+                   HorizontalOptions="Center"
+                   VerticalOptions="Center"/>
+        </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
