Preview 12 changes - Implicit usings impact

--- a/src/ProjectTemplates/MauiBlazorApp/App.xaml
+++ b/src/ProjectTemplates/MauiBlazorApp/App.xaml
@@ -7,7 +7,7 @@
     <Application.Resources>
         <ResourceDictionary>
 
-            <Color x:Key="PageBackgroundColor">#512bdf</Color>
+            <Color x:Key="PageBackgroundColor">#512BDF</Color>
             <Color x:Key="PrimaryTextColor">White</Color>
 
             <Style TargetType="Label">
