Artifacts updated to support .NET MAUI RC1

--- a/src/MauiTemplatesCLI/MauiAppX/App.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/App.xaml
@@ -4,67 +4,26 @@
              xmlns:local="clr-namespace:MauiApp1"
              x:Class="MauiApp1.App">
     <Application.Resources>
-        <ResourceDictionary>
+        <ResourceDictionary Source="Resources/Styles.xaml">
+            <!-- Additional Styles -->
 
-            <!--#if (Hybrid)-->
-            <Color x:Key="PageBackgroundColor">#512BDF</Color>
-            <Color x:Key="PrimaryTextColor">White</Color>
+            <x:Double x:Key="ItemSpacing">10</x:Double>
 
-            <Style TargetType="Label">
-                <Setter Property="TextColor" Value="{DynamicResource PrimaryTextColor}" />
-                <Setter Property="FontFamily" Value="OpenSansRegular" />
+            <Style ApplyToDerivedTypes="True" TargetType="StackBase">
+                <Setter Property="Spacing" Value="{StaticResource ItemSpacing}" />
             </Style>
 
-            <Style TargetType="Button">
-                <Setter Property="TextColor" Value="{DynamicResource PrimaryTextColor}" />
-                <Setter Property="FontFamily" Value="OpenSansRegular" />
-                <Setter Property="BackgroundColor" Value="#2B0B98" />
-                <Setter Property="Padding" Value="14,10" />
-            </Style>
-            <!--#else-->
-            <Color x:Key="PrimaryColor">#512BDF</Color>
-            <Color x:Key="PrimaryTextColor">Black</Color>
-            <Color x:Key="SecondaryColor">White</Color>
-
-            <Style TargetType="ContentPage"
-                   ApplyToDerivedTypes="True">
-                <Setter Property="Padding"
-                        Value="{OnPlatform iOS='30,60,30,30', Default='30'}" />
+            <Style x:Key="MauiLabel" TargetType="Label">
+                <Setter Property="TextColor" Value="{AppThemeBinding Dark={StaticResource White}, Light={StaticResource Primary}}" />
             </Style>
 
-            <Style TargetType="StackLayout">
-                <Setter Property="Spacing"
-                        Value="10" />
-            </Style>
-
-            <Style TargetType="HorizontalStackLayout">
-                <Setter Property="Spacing"
-                        Value="10" />
-            </Style>
-
-            <Style TargetType="VerticalStackLayout">
-                <Setter Property="Spacing"
-                        Value="10" />
-            </Style>
-
-            <Style TargetType="Label">
-                <!--#if (Plain)-->
+            <Style x:Key="Action" TargetType="Button">
                 <Setter Property="TextColor"
-                        Value="{DynamicResource PrimaryColor}" />
-                <!--#else-->
-                <Setter Property="TextColor"
-                        Value="{DynamicResource PrimaryTextColor}" />
-                <!--#endif-->
+                        Value="{StaticResource White}" />
                 <Setter Property="FontFamily"
-                        Value="OpenSansRegular" />
-            </Style>
-
-            <Style x:Key="Action"
-                   TargetType="Button">
-                <Setter Property="TextColor"
-                        Value="{DynamicResource PrimaryTextColor}" />
-                <Setter Property="FontFamily"
-                        Value="OpenSansRegular" />
+                        Value="{StaticResource AppFont}" />
+                <Setter Property="FontSize"
+                        Value="{StaticResource AppFontSize}" />
                 <Setter Property="Padding"
                         Value="14,10" />
             </Style>
@@ -72,22 +31,11 @@
             <Style x:Key="PrimaryAction"
                    TargetType="Button"
                    BasedOn="{StaticResource Action}">
-                <Setter Property="TextColor"
-                        Value="{DynamicResource SecondaryColor}" />
                 <Setter Property="BackgroundColor"
-                        Value="{DynamicResource PrimaryColor}" />
-            </Style>
-
-            <Style TargetType="DatePicker">
+                        Value="{StaticResource Primary}" />
                 <Setter Property="TextColor"
-                        Value="{DynamicResource PrimaryTextColor}" />
+                        Value="{StaticResource White}" />
             </Style>
-
-            <Style TargetType="TimePicker">
-                <Setter Property="TextColor"
-                        Value="{DynamicResource PrimaryTextColor}" />
-            </Style>
-            <!--#endif-->
         </ResourceDictionary>
     </Application.Resources>
 </Application>
