--- a/src/MauiTemplatesCLI/MauiAppX/EventsPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/EventsPage.xaml
@@ -2,8 +2,7 @@
 <ContentPage x:Class="MauiApp1.EventsPage"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MauiApp1"
-             BackgroundColor="{DynamicResource SecondaryColor}">
+             xmlns:local="clr-namespace:MauiApp1">
     <ContentPage.Content>
         <StackLayout HorizontalOptions="Center"
                      VerticalOptions="Center">
