--- a/src/MauiTemplatesCLI/MauiAppX/LoginPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/LoginPage.xaml
@@ -3,7 +3,7 @@
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MauiApp1"
-             BackgroundColor="{DynamicResource SecondaryColor}">
+             Shell.NavBarIsVisible="False">
     <StackLayout HorizontalOptions="Center"
                  VerticalOptions="Center">
         <Button Style="{StaticResource PrimaryAction}"
