--- a/src/MauiTemplatesCLI/MauiAppX/NewEventPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/NewEventPage.xaml
@@ -4,8 +4,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:MauiApp1"
-             Title="New Event"
-             BackgroundColor="{DynamicResource SecondaryColor}">
+             Title="New Event">
     <ContentPage.Content>
         <StackLayout>
             <Entry Text=""
