--- a/src/MauiTemplatesCLI/MauiAppX/SearchPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/SearchPage.xaml
@@ -3,8 +3,7 @@
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MauiApp1"
-             Title="Search"
-             BackgroundColor="{DynamicResource SecondaryColor}">
+             Title="Search">
     <Label Text="Search"
            HorizontalOptions="Center"
            VerticalOptions="Center" />
