--- a/src/MauiTemplatesCLI/MauiAppX/SettingsPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/SettingsPage.xaml
@@ -3,8 +3,7 @@
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MauiApp1"
-             Title="Settings"
-             BackgroundColor="{DynamicResource SecondaryColor}">
+             Title="Settings">
     <Label Text="Settings"
            HorizontalOptions="Center"
            VerticalOptions="Center" />
