--- a/src/MauiTemplatesCLI/MauiAppX/NewEventPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/NewEventPage.xaml
@@ -4,7 +4,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:MauiApp1"
-             Title="New Event">
+             Title="New Event"
+             Shell.PresentationMode="ModalAnimated"
+             Padding="{OnPlatform iOS={StaticResource ApplePadding},
+                                  Default={StaticResource DefaultPadding}}">
     <ContentPage.Content>
         <StackLayout>
             <Entry Text=""
