--- a/src/MauiTemplatesCLI/MauiAppX/App.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/App.xaml
@@ -6,6 +6,10 @@
     <Application.Resources>
         <ResourceDictionary Source="Resources/Styles.xaml">
             <!-- Additional Styles -->
+            <!--#if (!(Plain && Hybrid))-->
+            <Thickness x:Key="ApplePadding">30,60,30,30</Thickness>
+            <Thickness x:Key="DefaultPadding">30,60,30,30</Thickness>
+            <!--#endif-->
 
             <x:Double x:Key="ItemSpacing">10</x:Double>
 
@@ -18,8 +22,10 @@
             </Style>
 
             <Style x:Key="Action" TargetType="Button">
+                <Setter Property="BackgroundColor"
+                        Value="{AppThemeBinding Dark={StaticResource BackgroundDark}, Light={StaticResource BackgroundLight}}" />
                 <Setter Property="TextColor"
-                        Value="{StaticResource White}" />
+                        Value="{AppThemeBinding Dark={StaticResource TextDark}, Light={StaticResource TextLight}}" />
                 <Setter Property="FontFamily"
                         Value="{StaticResource AppFont}" />
                 <Setter Property="FontSize"
@@ -33,6 +39,8 @@
                    BasedOn="{StaticResource Action}">
                 <Setter Property="BackgroundColor"
                         Value="{StaticResource Primary}" />
+                <Setter Property="FontAttributes"
+                        Value="Bold" />
                 <Setter Property="TextColor"
                         Value="{StaticResource White}" />
             </Style>
