--- a/src/MauiTemplatesCLI/MauiAppX/Shared/SurveyPrompt.razor
+++ b/src/MauiTemplatesCLI/MauiAppX/Shared/SurveyPrompt.razor
@@ -1,4 +1,6 @@
-﻿<div class="alert alert-secondary mt-4">
+﻿@inject IAppInfo appInfo
+
+<div class="@alertStyle">
 	<span class="oi oi-pencil me-2" aria-hidden="true"></span>
 	<strong>@Title</strong>
 
@@ -12,5 +14,16 @@
 @code {
 	// Demonstrates how a parent component can supply parameters
 	[Parameter]
-	public string Title { get; set; }
+	public string? Title { get; set; }
+
+	private string? alertStyle;
+
+	protected override void OnInitialized()
+	{
+		alertStyle = appInfo.RequestedTheme switch
+		{
+			AppTheme.Dark => "alert alert-dark mt-4",
+			_ => "alert alert-secondary mt-4"
+		};
+	}
 }
