--- a/src/ItemTemplates/MauiPageXaml/MauiPage.xaml
+++ b/src/ItemTemplates/MauiPageXaml/MauiPage.xaml
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <ContentPage x:Class="$rootnamespace$.$safeitemname$"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:$rootnamespace$"
-             BackgroundColor="White">
+             xmlns:local="clr-namespace:$rootnamespace$">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to .NET MAUI!!!"
