--- a/src/MauiTemplatesCLI/MauiView/MauiView.xaml
+++ b/src/MauiTemplatesCLI/MauiView/MauiView.xaml
@@ -4,11 +4,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MyApp.Namespace">
     <ContentView.Content>
-        <StackLayout>
+        <Grid>
             <Label Text="Welcome to .NET MAUI!!!"
                    TextColor="Purple"
                    HorizontalOptions="Center"
                    VerticalOptions="Center"/>
-        </StackLayout>
+        </Grid>
     </ContentView.Content>
 </ContentView>
