--- a/src/MauiTemplatesCLI/MauiAppX/_Imports.razor
+++ b/src/MauiTemplatesCLI/MauiAppX/_Imports.razor
@@ -4,5 +4,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using MauiApp1
-@using MauiApp1.Shared
+@using MauiApp._1
+@using MauiApp._1.Shared
