--- a/src/MauiTemplatesCLI/MauiAppX/AppShell.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/AppShell.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<Shell x:Class="MauiApp1.AppShell"
+<Shell x:Class="MauiApp._1.AppShell"
        xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-       xmlns:local="clr-namespace:MauiApp1">
+       xmlns:local="clr-namespace:MauiApp._1">
     <!--
         The overall app visual hierarchy is defined here, along with navigation.
         Ensure atleast a Flyout item or a TabBar is defined for Shell to work
