--- a/src/MauiTemplatesCLI/MauiAppX/EventsPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/EventsPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<ContentPage x:Class="MauiApp1.EventsPage"
+<ContentPage x:Class="MauiApp._1.EventsPage"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MauiApp1">
+             xmlns:local="clr-namespace:MauiApp._1">
     <ContentPage.Content>
         <StackLayout HorizontalOptions="Center"
                      VerticalOptions="Center">
