--- a/src/MauiTemplatesCLI/MauiAppX/LoginPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/LoginPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<ContentPage x:Class="MauiApp1.LoginPage"
+<ContentPage x:Class="MauiApp._1.LoginPage"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MauiApp1"
+             xmlns:local="clr-namespace:MauiApp._1"
              Shell.NavBarIsVisible="False">
     <StackLayout HorizontalOptions="Center"
                  VerticalOptions="Center">
