--- a/src/MauiTemplatesCLI/MauiAppX/Platforms/Windows/App.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/Platforms/Windows/App.xaml
@@ -1,8 +1,8 @@
 ﻿<maui:MauiWinUIApplication
-    x:Class="MauiApp1.WinUI.App"
+    x:Class="MauiApp._1.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:MauiApp1.WinUI">
+    xmlns:local="using:MauiApp._1.WinUI">
 
 </maui:MauiWinUIApplication>
