--- a/src/MauiTemplatesCLI/MauiPage/MauiPage.1.xaml
+++ b/src/MauiTemplatesCLI/MauiPage/MauiPage.1.xaml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<ContentView x:Class="MyApp.Namespace.MauiView"
+<ContentPage x:Class="MyApp.Namespace.MauiPage__1"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MyApp.Namespace">
-    <ContentView.Content>
+    <ContentPage.Content>
         <Grid>
             <Label Text="Welcome to .NET MAUI!!!"
                    TextColor="Purple"
                    HorizontalOptions="Center"
                    VerticalOptions="Center"/>
         </Grid>
-    </ContentView.Content>
-</ContentView>
+    </ContentPage.Content>
+</ContentPage>
