--- a/src/MauiTemplatesCLI/MauiResDict/MauiResDict.1.xaml
+++ b/src/MauiTemplatesCLI/MauiResDict/MauiResDict.1.xaml
@@ -10,7 +10,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                     xmlns:local="clr-namespace:MyApp.Namespace"
-                    x:Class="MyApp.Namespace.MauiResDict">
+                    x:Class="MyApp.Namespace.MauiResDict__1">
     <!-- Define your resources here -->
 </ResourceDictionary>
 <!--#endif-->
