--- a/src/MauiTemplatesCLI/MauiShell/MauiShell.1.xaml
+++ b/src/MauiTemplatesCLI/MauiShell/MauiShell.1.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<Shell x:Class="MyApp.Namespace.MauiShell"
+<Shell x:Class="MyApp.Namespace.MauiShell__1"
        xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:local="clr-namespace:MyApp.Namespace">
