App project updated with C# Markup syntax

--- a/src/MauiTemplatesCLI/MauiShellRazor/MauiShell.1.razor
+++ b/src/MauiTemplatesCLI/MauiShellRazor/MauiShell.1.razor
@@ -1,10 +1,25 @@
 ﻿<Shell>
-    @* Define Shell Flyout and Tab Items *@
-    @* <ShellContent Title="">
-        <MyPage />
-    </ShellContent> *@
+    @* Flyout Items *@
+    @* <FlyoutItem Title="">
+        <ShellContent>
+            <ContentPage />
+        </ShellContent>
+    </FlyoutItem> *@
+    
+    @* Menu Items *@
+    @* <MenuItem OnClick="@OnMenuItemClicked" Text="" /> *@
+    
+    @* Tab Items *@
+    @* <TabBar Title="">
+        <ShellContent>
+            <ContentPage />
+        </ShellContent>
+    </TabBar> *@
 </Shell>
 
 @code {
+    //void OnMenuItemClicked()
+    //{
 
+    //}
 }
