Support for MVVM in .NET MAUI App

--- a/src/MauiTemplatesCLI/MauiAppX/AppShell.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/AppShell.xaml
@@ -2,7 +2,8 @@
 <Shell x:Class="MauiApp._1.AppShell"
        xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-       xmlns:local="clr-namespace:MauiApp._1">
+       xmlns:local="clr-namespace:MauiApp._1"
+       xmlns:vw="clr-namespace:MauiApp._1.Views">
     <!--
         The overall app visual hierarchy is defined here, along with navigation.
         Ensure atleast a Flyout item or a TabBar is defined for Shell to work
@@ -21,13 +22,13 @@
         And ensure appropriate page definitions are available for it work as expected
     -->
     <FlyoutItem Title="Calendar">
-        <ShellContent ContentTemplate="{DataTemplate local:EventsPage}" Route="home" />
+        <ShellContent ContentTemplate="{DataTemplate vw:EventsPage}" Route="home" />
     </FlyoutItem>
     <FlyoutItem Title="Search">
-        <ShellContent ContentTemplate="{DataTemplate local:SearchPage}" Route="search" />
+        <ShellContent ContentTemplate="{DataTemplate vw:SearchPage}" Route="search" />
     </FlyoutItem>
     <FlyoutItem Title="Settings">
-        <ShellContent ContentTemplate="{DataTemplate local:SettingsPage}" Route="settings" />
+        <ShellContent ContentTemplate="{DataTemplate vw:SettingsPage}" Route="settings" />
     </FlyoutItem>
     <!--
         When the Flyout is visible this will be a menu item you can tie a click behavior to
@@ -49,7 +50,7 @@
         And ensure appropriate page definitions are available for it work as expected
     -->
     <TabBar>
-        <ShellContent ContentTemplate="{DataTemplate local:LoginPage}" Route="login" />
+        <ShellContent ContentTemplate="{DataTemplate vw:LoginPage}" Route="login" />
     </TabBar>
     <!-- Optional Templates
     // These may be provided inline as below or as separate classes.
