--- a/src/MauiTemplatesCLI/MauiAppX/Controls/DateTimePicker.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/Controls/DateTimePicker.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<ContentView x:Class="MauiApp._1.DateTimePicker"
+<ContentView x:Class="MauiApp._1.Controls.DateTimePicker"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MauiApp._1">
