--- a/src/MauiTemplatesCLI/MauiAppX/_Imports.razor
+++ b/src/MauiTemplatesCLI/MauiAppX/_Imports.razor
@@ -2,6 +2,7 @@
 @using BlazorBindings.Maui
 @using BlazorBindings.Maui.Elements
 @using MC = Microsoft.Maui.Controls
+
 @*#endif*@
 @using System.Net.Http
 @using Microsoft.AspNetCore.Components.Forms
@@ -9,7 +10,9 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+
 @using MauiApp._1
 @*#if (Hybrid)*@
 @using MauiApp._1.Shared
 @*#endif*@
+@using MauiApp._1.Views
