--- a/src/MauiTemplatesCLI/MauiAppX/App.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/App.xaml
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
-<Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MauiApp._1"
-             x:Class="MauiApp._1.App">
+<Application
+        x:Class="MauiApp._1.App"
+        xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+        xmlns:local="clr-namespace:MauiApp._1">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -10,7 +11,7 @@
                 <ResourceDictionary Source="Resources/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <!-- Additional Styles -->
-            <!--#if (!(Plain && Hybrid))-->
+            <!--#if (!(Plain || Hybrid))-->
             <Thickness x:Key="ApplePadding">30,60,30,30</Thickness>
             <Thickness x:Key="DefaultPadding">30</Thickness>
             <!--#endif-->
