--- a/src/MauiTemplatesCLI/MauiAppX/Views/SettingsPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/Views/SettingsPage.xaml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--#if (Mvvm)-->
-<ContentPage x:Class="MauiApp._1.Views.SettingsPage"
-             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MauiApp._1"
-             xmlns:vm="clr-namespace:MauiApp._1.ViewModels"
-             Title="{Binding Title}"
-             x:DataType="vm:SettingsViewModel">
+<ContentPage
+    x:Class="MauiApp._1.Views.SettingsPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:MauiApp._1"
+    xmlns:vm="clr-namespace:MauiApp._1.ViewModels"
+    Title="{Binding Title}"
+    x:DataType="vm:SettingsViewModel">
 <!--#else-->
-<ContentPage x:Class="MauiApp._1.Views.SettingsPage"
-             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MauiApp._1"
-             Title="Settings">
+<ContentPage
+    x:Class="MauiApp._1.Views.SettingsPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:MauiApp._1"
+    Title="Settings">
 <!--#endif-->
-    <Label Text="Settings"
-           HorizontalOptions="Center"
-           VerticalOptions="Center" />
+    <Label
+        HorizontalOptions="Center"
+        Text="Settings"
+        VerticalOptions="Center" />
 </ContentPage>
