--- a/src/MauiTemplatesCLI/MauiResDict/MauiResDict.1.xaml
+++ b/src/MauiTemplatesCLI/MauiResDict/MauiResDict.1.xaml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--#if (NoCodeBehind || XamlOnly)-->
 <?xaml-comp compile="true" ?>
-<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                    xmlns:local="clr-namespace:MyApp.Namespace">
+<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:MyApp.Namespace">
     <!-- Define your resources here -->
 </ResourceDictionary>
 <!--#else-->
-<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                    xmlns:local="clr-namespace:MyApp.Namespace"
-                    x:Class="MyApp.Namespace.MauiResDict__1">
+<ResourceDictionary
+    x:Class="MyApp.Namespace.MauiResDict__1"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:MyApp.Namespace">
     <!-- Define your resources here -->
 </ResourceDictionary>
 <!--#endif-->
