--- a/src/MauiTemplatesCLI/MauiAppX/Views/SearchPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/Views/SearchPage.xaml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--#if (Mvvm)-->
+<!--#if (CompiledBindings)-->
+<ContentPage
+    x:Class="MauiApp._1.Views.SearchPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MauiApp._1"
+    xmlns:vm="clr-namespace:MauiApp._1.ViewModels"
+    Title="{x:Bind Title}"
+    x:DataType="vm:SearchViewModel"
+    mc:Ignorable="d">
+<!--#else-->
 <ContentPage
     x:Class="MauiApp._1.Views.SearchPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -11,6 +24,7 @@
     Title="{Binding Title}"
     x:DataType="vm:SearchViewModel"
     mc:Ignorable="d">
+<!--#endif-->
 <!--#else-->
 <ContentPage
     x:Class="MauiApp._1.Views.SearchPage"
