--- a/src/MauiTemplatesCLI/MauiAppX/Views/EventsPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/Views/EventsPage.xaml
@@ -15,11 +15,19 @@
             HorizontalOptions="Center"
             VerticalOptions="Center">
             <Label Text="You don't have anything scheduled today." />
+            <!--#if (CompiledBindings)-->
+            <Button
+                Command="{x:Bind AddEventCommand}"
+                HorizontalOptions="Center"
+                Style="{StaticResource PrimaryAction}"
+                Text="Add Event" />
+            <!--#else-->
             <Button
                 Command="{Binding AddEventCommand}"
                 HorizontalOptions="Center"
                 Style="{StaticResource PrimaryAction}"
                 Text="Add Event" />
+            <!--#endif-->
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
