--- a/src/MauiTemplatesCLI/MauiAppX/Views/NewEventPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/Views/NewEventPage.xaml
@@ -1,5 +1,61 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--#if (Mvvm)-->
+<!--#if (CompiledBindings)-->
+<ContentPage
+    x:Class="MauiApp._1.Views.NewEventPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ctrl="clr-namespace:MauiApp._1.Controls"
+    xmlns:local="clr-namespace:MauiApp._1"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    xmlns:vm="clr-namespace:MauiApp._1.ViewModels"
+    Padding="{OnPlatform iOS={StaticResource ApplePadding},
+                         Default={StaticResource DefaultPadding}}"
+    Shell.PresentationMode="ModalAnimated"
+    Title="{x:Bind Title}"
+    x:DataType="vm:NewEventViewModel"
+    mc:Ignorable="d">
+    <ContentPage.Content>
+        <StackLayout>
+            <Entry
+                Text="{x:Bind Event.Name}"
+                Placeholder="Event name"
+                MaxLength="100" />
+            <Entry
+                Text="{x:Bind Event.Location}"
+                Placeholder="Location"
+                MaxLength="100" />
+            <ctrl:DateTimePicker
+                Title="Start:"
+                Date="{x:Bind Event.StartsAt.Date}"
+                MinimumDate="{x:Static sys:DateTime.Now}"
+                Time="{x:Bind Event.StartsAt.TimeOfDay}" />
+            <ctrl:DateTimePicker
+                Title="End:"
+                Date="{x:Bind Event.EndsAt.Date}"
+                MinimumDate="{x:Static sys:DateTime.Now}"
+                Time="{x:Bind Event.EndsAt.TimeOfDay}" />
+            <Editor
+                Text="{x:Bind Event.Notes}"
+                HeightRequest="100"
+                Placeholder="Notes"
+                MaxLength="500" />
+            <HorizontalStackLayout HorizontalOptions="Center">
+                <Button
+                    Command="{x:Bind SaveCommand}"
+                    Style="{StaticResource PrimaryAction}"
+                    Text="Save" />
+                <Button
+                    Command="{x:Bind CancelCommand}"
+                    Style="{StaticResource Action}"
+                    Text="Cancel" />
+            </HorizontalStackLayout>
+        </StackLayout>
+    </ContentPage.Content>
+</ContentPage>
+<!--#else-->
 <ContentPage
     x:Class="MauiApp._1.Views.NewEventPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -54,6 +110,7 @@
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
+<!--#endif-->
 <!--#else-->
 <ContentPage
     x:Class="MauiApp._1.Views.NewEventPage"
