--- a/src/MauiTemplatesCLI/MauiAppX/Views/MainPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppX/Views/MainPage.xaml
@@ -44,6 +44,7 @@
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MauiApp._1"
+    Title="MauiApp._1"
     mc:Ignorable="d">
     <ContentPage.Content>
         <BlazorWebView HostPage="wwwroot/index.html">
@@ -62,17 +63,16 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+    xmlns:droid="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:android="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.AndroidSpecific;assembly=Microsoft.Maui.Controls"
     xmlns:local="clr-namespace:MauiApp._1"
     xmlns:vw="clr-namespace:MauiApp._1.Views"
-    android:TabbedPage.ToolbarPlacement="Bottom"
+    Title="MauiApp._1"
+    droid:TabbedPage.ToolbarPlacement="Bottom"
     mc:Ignorable="d">
-    <NavigationPage
-        x:Name="calendar"
-        Title="Calendar">
+    <NavigationPage Title="Calendar">
         <x:Arguments>
-            <vw:EventsPage />
+            <vw:EventsPage NavigationPage.HasNavigationBar="{OnPlatform Android=False, Default=True}" />
         </x:Arguments>
     </NavigationPage>
     <vw:SearchPage />
@@ -137,8 +137,8 @@
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MauiApp._1"
-    mc:Ignorable="d"
-    Title="Calendar">
+    Title="Calendar"
+    mc:Ignorable="d">
     <ContentPage.Content>
         <StackLayout
             HorizontalOptions="Center"
@@ -187,6 +187,7 @@
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MauiApp._1"
+    Title="MauiApp._1"
     mc:Ignorable="d">
 <!--#endif-->
     <ContentPage.Content>
