--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.RazorLib/Shared/NavMenu.razor
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.RazorLib/Shared/NavMenu.razor
@@ -32,8 +32,5 @@
 
 	private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
-	private void ToggleNavMenu()
-	{
-		collapseNavMenu = !collapseNavMenu;
-	}
+	private void ToggleNavMenu() => collapseNavMenu = !collapseNavMenu;
 }
